bon/tests/integration/ui/compile_fail/private_fields_access.stderr
error: use of deprecated field `unsafe_fields_are_private::SutSutBuilder::__unsafe_private_phantom`: this field should not be used directly; it's an implementation detail, and if you access it directly, you may break some internal unsafe invariants; if you found yourself needing it, then you are probably doing something wrong; feel free to open an issue/discussion in our GitHub repository (https://github.com/elastio/bon) or ask for help in our Discord server (https://bon-rs.com/discord)
  --> tests/integration/ui/compile_fail/private_fields_access.rs:20:13
   |
20 |             __unsafe_private_phantom: _,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/integration/ui/compile_fail/private_fields_access.rs:1:9
   |
1  | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(deprecated)]` implied by `#[deny(warnings)]`

error: use of deprecated field `unsafe_fields_are_private::SutSutBuilder::__unsafe_private_named`: this field should not be used directly; it's an implementation detail, and if you access it directly, you may break some internal unsafe invariants; if you found yourself needing it, then you are probably doing something wrong; feel free to open an issue/discussion in our GitHub repository (https://github.com/elastio/bon) or ask for help in our Discord server (https://bon-rs.com/discord)
  --> tests/integration/ui/compile_fail/private_fields_access.rs:21:13
   |
21 |             __unsafe_private_named: _,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0616]: field `self_receiver` of struct `MustBePrivateMethodBuilder` is private
  --> tests/integration/ui/compile_fail/private_fields_access.rs:41:21
   |
41 |     let _ = builder.self_receiver;
   |                     ^^^^^^^^^^^^^ private field

error[E0616]: field `_x1` of struct `MustBePrivateMethodBuilder` is private
  --> tests/integration/ui/compile_fail/private_fields_access.rs:42:21
   |
42 |     let _ = builder._x1;
   |                     ^^^ private field
